crates/codegen/language/tests/src/fail/parsing/unrecognized_field/test.stderr
error: unexpected token, expected `)`
  --> src/fail/parsing/unrecognized_field/test.rs:19:13
   |
19 |             unrecognized_field = true
   |             ^^^^^^^^^^^^^^^^^^
